# fract

./: 0  Cargo.toml  LICENSE  README.md  usage.md
benches/: fract_bench.rs
docs/: LIBRARY_USAGE.md
examples/: demo.rs
src/: lib.rs  main.rs
