[package]
name = "fract"
version = "0.1.2"
edition = "2024"
authors = ["@morphym"]
description = "A Hyperchaotic, Quantum-Resistant, Minimalist Cryptographic Hash"
license = "MIT"
repository = "https://github.com/morphym/fract"

[lib]
name = "fract"
path = "src/lib.rs"

[[bin]]
name = "fract"
path = "src/main.rs"

[dependencies]
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "fract_bench"
harness = false
