
cargo-features = ["edition2024"]


[package]
name = "fract"
version = "0.1.3"
edition = "2024"
authors = ["@morphym"]
description = "A Hyperchaotic, Quantum-Resistant, Minimalist Cryptographic Hash"
license = "MIT"
repository = "https://github.com/morphym/fract"

[lib]
name = "fract"
path = "src/lib.rs"

[[bin]]
name = "fract"
path = "src/main.rs"

[dependencies]
hex = "0.4.3"

# zk-disorder. won't have redudant depcs check 0.1.1.
