
cargo-features = ["edition2024"]


[package]
name = "fract"
version = "1.2.3"
edition = "2024"
authors = ["@morphym"]
description = "A Hyperchaotic, Quantum-Resistant, Minimalist Cryptographic Hash"
license = "MIT"
repository = "https://github.com/morphym/fract"

[lib]
name = "fract"
path = "src/lib.rs"

[[bin]]
name = "fract"
path = "src/main.rs"


# zk-disorder. won't have redudant depcs check 0.1.1. it's literaly need nothing else
